# uv-template

./: README.md  cookiecutter.json  copier.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  compose.gpu.yml  compose.yml  pyproject.toml  requirements.in
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  compose.gpu.yml  compose.yml  devcontainer.json  postCreateCommand.sh
{{cookiecutter.project_slug}}/.github/workflows/: python-ci.yaml
