[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.12.0",
    "ruff>=0.7.0",
    "sqlfluff>=3.2.4",
]
